--- a/app/src/main/res/layout/activity_find_user.xml
+++ b/app/src/main/res/layout/activity_find_user.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FindUserActivity">
+    tools:context=".Utils.FindUserActivity">
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
