--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -5,17 +5,10 @@
     android:id="@+id/layout">
 
     <TextView
+        android:padding="20sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/name"
-        android:text="Name"
+        android:id="@+id/title"
+        android:text="title"
         />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/phone"
-        android:text="Phone"
-        />
-
-
 </LinearLayout>
